--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
+        {% if page.ogimage %}
+        <meta property="og:image" content="{{ page.ogimage }}" />
+        {% endif %}
+
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
