--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,9 @@ h1, h2 {
   letter-spacing: -3px;
   margin-bottom: 1em;
 }
+h3 {
+  font-size: 150%;
+}
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -147,7 +150,6 @@ ul.posts span {
 
 /* standard */
 .post {
-  font-family: pt_serifregular;
   font-size: 18px;
   line-height: 160%;
 }
@@ -183,6 +185,13 @@ ul.posts span {
   background-color: #333;
 }
 
+img.right {
+  width: 300px;
+  max-width: 300px;
+  float: right;
+  margin: 0.5em 1em;
+}
+
 @media (max-width: 500px) {
   h1, h2 {
     font-size: 42px;
@@ -190,4 +199,12 @@ ul.posts span {
   .post {
     font-size: 16px;
   }
+  img.right {
+    float: none;
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
+
