--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,8 @@
         <div class="container">
           <div class="site">
             <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
+              <h1 class="title"><a href="//reidransom.com/">reidransom.com</a></h1>
+              <a class="extra" href="/">blog</a>
               <a class="extra" href="/feed.xml">subscribe</a>
             </div>
 
@@ -39,8 +39,8 @@
               </div>
               <div class="contact">
                 <p>
-                  Founder of <a href="http://electricpond.io/">Electric Pond</a><br />
-                  reid@electricpond.io<br />
+                  Founder of <a href="http://electricpond.com/">Electric Pond</a><br />
+                  reid@electricpond.com<br />
                 </p>
               </div>
               <div class="contact">
