--- a/css/main.scss
+++ b/css/main.scss
@@ -41,9 +41,21 @@ h3 {
 }
 p { margin: 1em 0; }
 
+/*
 a         { color: #00a; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
+*/
+
+$blue: rgba(15, 114, 218, 1);
+
+a, a:hover, a:visited {
+  color: $blue;
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
+}
 
 /*****************************************************************************/
 /*
@@ -80,10 +92,6 @@ ul.posts span {
   padding: 0 1em 0;
 }
 
-.site .header a {
-  text-decoration: none;
-}
-
 .site .header h1.title {
   display: inline-block;
   margin-bottom: 2em;
@@ -93,21 +101,8 @@ ul.posts span {
   font-weight: 400;
 }
 
-.site .header h1.title a {
-  color: #a00;
-}
-
-.site .header h1.title a:hover {
-  color: #000;
-}
-
 .site .header a.extra {
-  color: #aaa;
   margin-left: 1em;
-}
-
-.site .header a.extra:hover {
-  color: #000;
 }
 
 .site .meta {
@@ -126,10 +121,6 @@ ul.posts span {
 .site .footer .contact {
   float: left;
   margin-right: 3em;
-}
-
-.site .footer .contact a {
-  color: #8085C1;
 }
 
 .site .footer .rss {
