--- a/css/main.scss
+++ b/css/main.scss
@@ -41,6 +41,16 @@ h3 {
 }
 p { margin: 1em 0; }
 
+pre, code {
+  font-family: Monaco, Menlo, 'Ubuntu Mono', Consolas, source-code-pro, monospace;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+pre {
+  overflow-x: scroll;
+}
+
 /*
 a         { color: #00a; }
 a:hover   { color: #000; }
