left align text

--- a/css/main.scss
+++ b/css/main.scss
@@ -95,7 +95,7 @@ ul.posts span {
 
 .site {
   font-size: 115%;
-  text-align: justify;
+  text-align: left;
   max-width: 600px;
   min-width: 320px;
   margin: 3em auto 2em;
